# robinhood-mcp

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-16-robinhood-cli-design.md
robin_stocks_mcp/: server.py
robin_stocks_mcp/models/: __init__.py  earnings.py  fundamentals.py  news.py  options.py  portfolio.py
robin_stocks_mcp/robinhood/: client.py
robin_stocks_mcp/services/: __init__.py  earnings.py  fundamentals.py  market_data.py  news.py  options.py  portfolio.py  watchlists.py
robinhood-cli/robinhood_cli/: auth.py  main.py
robinhood-cli/robinhood_cli/commands/: fundamentals.py  market.py  news.py  options.py  orders.py  portfolio.py  watchlists.py
robinhood-cli/tests/unit/: test_commands_market.py  test_commands_options.py  test_commands_portfolio.py  test_commands_remaining.py
robinhood-core/robinhood_core/: client.py
robinhood-core/tests/unit/: test_robinhood_client.py
skills/rh-cli/: SKILL.md
tests/integration/: test_smoke.py
tests/unit/: test_model_coercion.py  test_models_fundamentals.py  test_models_market.py  test_models_news.py  test_models_options.py  test_models_portfolio.py  test_models_watchlists.py  test_robinhood_client.py  test_server.py  test_service_earnings.py  test_service_fundamentals.py  test_service_integration.py  test_service_market_data.py  test_service_news.py  test_service_options.py  test_service_portfolio.py  test_service_watchlists.py
