[project]
name = "robin-stocks-mcp"
version = "0.1.0"
description = "MCP server for Robinhood API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "robin-stocks>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
robinhood-mcp = "robin_stocks_mcp.server:main"
